add swagger doc for filter motel
